crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_hole_empty.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>{}</p>"
---
Markup(
    Child(
        HoleEmpty(
            1,
            5,
        ),
        1,
        4,
    ),
    1,
    1,
)
