crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_hole_unclosed.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>{x y}</p>"
---
Markup(
    Child(
        HoleEnd(
            ExpectedEnd {
                opening: Position {
                    line: 1,
                    column: 4,
                },
                boundary: Position {
                    line: 1,
                    column: 6,
                },
                unexpected: Position {
                    line: 1,
                    column: 7,
                },
            },
        ),
        1,
        4,
    ),
    1,
    1,
)
