crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_hole_unclosed_at_close_tag.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<p>{x</p>"
---
Markup(
    Child(
        Hole(
            OperatorRight(
                Lt,
                1,
                7,
            ),
            1,
            5,
        ),
        1,
        4,
    ),
    1,
    1,
)
