crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_name.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div>< </div>"
---
Markup(
    Child(
        Element(
            Name(
                1,
                7,
            ),
            1,
            6,
        ),
        1,
        6,
    ),
    1,
    1,
)
