crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_name_component_dangling.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<Ui:: />"
---
Markup(
    Name(
        1,
        6,
    ),
    1,
    1,
)
