crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_stray_close_brace.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div>}</div>"
---
Markup(
    Child(
        StrayBrace(
            1,
            6,
        ),
        1,
        6,
    ),
    1,
    1,
)
