crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_style_css_body_is_hole.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<style>.a { }</style>"
---
Markup(
    Child(
        HoleEmpty(
            1,
            13,
        ),
        1,
        8,
    ),
    1,
    1,
)
