crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_tag_end.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div =>"
---
Markup(
    TagEnd(
        ExpectedEnd {
            opening: Position {
                line: 1,
                column: 1,
            },
            boundary: Position {
                line: 1,
                column: 5,
            },
            unexpected: Position {
                line: 1,
                column: 6,
            },
        },
    ),
    1,
    1,
)
