crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_unclosed.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div>text"
---
Markup(
    Unclosed {
        name: "div",
        row: 1,
        col: 1,
    },
    1,
    1,
)
