crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_unclosed_nested.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "<div><p>x"
---
Markup(
    Child(
        Element(
            Unclosed {
                name: "p",
                row: 1,
                col: 6,
            },
            1,
            6,
        ),
        1,
        6,
    ),
    1,
    1,
)
