crates/alder-parse/src/markup/snapshots/alder_parse__markup__tests__error_unexpected_close_at_start.snap
---
source: crates/alder-parse/src/markup/mod.rs
description: "</div>"
---
UnexpectedClose(
    1,
    1,
)
